simplified template()